--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     display: flex;
     align-items: center;
     padding-left: 1rem;
+    position: relative;
 }
 
 .cell-action-cont>*{
@@ -65,7 +66,6 @@ body{
     position: relative;
 }
 .cell-cont{
-    display: flex;
     position: absolute;
     top:0;
     left:2rem;
@@ -122,13 +122,36 @@ outline: none;
     border: 1px solid #dfe4ea;
     height: 2rem;
     width: 7rem;
-    position: sticky;
+
+}
+.cell{
+   
+   
+    border: 1px solid #dfe4ea;
+    height: 2rem;
+    width: 7rem;
+}
+.row-cont{
+    display: flex;
+    /* background-color: aqua;
+    border: 2px solid blueviolet; */
 }
 .address-row-cont{
-    position: absolute;
+    position: sticky;
     top: 0;
     left: 0;
     background-color: #ecf0f1;
     height: 2rem;
     display: flex;
+}
+.color-prop>input{
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.color-prop{
+    position: relative;
 }
